{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 2104,
  "lineage": "bd170668-716c-bd8b-71c2-078b758fc11a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-0fb9556fd824ec367",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-0fb9556fd824ec367",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a3080cc1d1244b7",
            "private_dns": "ip-10-0-2-42.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.42",
            "public_dns": "ec2-18-221-169-176.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.169.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024796f5a425d1a3c",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046b51ad68e601888",
            "tags": {
              "Name": "israel-bastion"
            },
            "tags_all": {
              "Name": "israel-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ddf9a7451c13869"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.bastion_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mgmt_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-08b7d65ee43a6e23c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-08b7d65ee43a6e23c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0757296cf23d4cab1",
            "private_dns": "ip-10-0-3-206.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-086c62a27846e669b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-mgmt-1"
            },
            "tags_all": {
              "Name": "israel-mgmt-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1ec7b4e3a132a1e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-0787de5378b94df97",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-0787de5378b94df97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba4a1ed3494d9e08",
            "private_dns": "ip-10-0-3-162.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0f6012b7869372369",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-mgmt-2"
            },
            "tags_all": {
              "Name": "israel-mgmt-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1ec7b4e3a132a1e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-01e0e9b1c207717d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-01e0e9b1c207717d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cee9a18c877f48e4",
            "private_dns": "ip-10-0-3-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-018b0152aa4c51f8e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-mgmt-3"
            },
            "tags_all": {
              "Name": "israel-mgmt-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1ec7b4e3a132a1e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "storage_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-0dd62209795a42fb1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03358331baac22065",
                "volume_size": 2,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdi",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-04811c6a8e9699fbe",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-0dd62209795a42fb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f208c98680ba59a3",
            "private_dns": "ip-10-0-3-106.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b1b7814ae129b4f",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-storage-1"
            },
            "tags_all": {
              "Name": "israel-storage-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029c94ed7aa4390d7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "aws_security_group.storage_nodes_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-0b468558f231572a7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024c4436cecfceaa1",
                "volume_size": 2,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdi",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-08a0638766ada2963",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-0b468558f231572a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c53f02010310885f",
            "private_dns": "ip-10-0-3-53.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02731a397db811878",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-storage-2"
            },
            "tags_all": {
              "Name": "israel-storage-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029c94ed7aa4390d7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "aws_security_group.storage_nodes_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef50c2b2eb330511",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-09fb2ac9c16a0b369",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03aadf4b773ad5607",
                "volume_size": 2,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdi",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0abbd17c8664d0278",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-09fb2ac9c16a0b369",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b33408f4ea9df21",
            "private_dns": "ip-10-0-3-252.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f5a5001ccf5d556",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed80826052275165",
            "tags": {
              "Name": "israel-storage-3"
            },
            "tags_all": {
              "Name": "israel-storage-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029c94ed7aa4390d7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "aws_security_group.storage_nodes_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0aa0b706645a788f4",
            "description": "API Gateway Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from API gateway to Loadbalancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa0b706645a788f4",
            "ingress": [],
            "name": "israel-api_gateway_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-03ddf9a7451c13869",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ddf9a7451c13869",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "israel-bastion_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "extra_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-028d1b81b0e928fa8",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028d1b81b0e928fa8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s cluster",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s cluster",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 2375
              }
            ],
            "name": "israel-extra_nodes_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0dc3fc00790b8b186",
            "description": "Loadbalancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from API gateway to Mgmt nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc3fc00790b8b186",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Grafana from API gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa0b706645a788f4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Graylog from API gateway",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa0b706645a788f4"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from API gateway",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa0b706645a788f4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "israel-loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0d1ec7b4e3a132a1e",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all output traffic so that packages can be downloaded",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1ec7b4e3a132a1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4800,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4800
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Manager Communication",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication TCP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication UDP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Overlay Network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [],
                "description": "EFS from mgmt nodes",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "Grafana from Loadbalancer",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc3fc00790b8b186"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Graylog from Loadbalancer",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc3fc00790b8b186"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Loadbalancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc3fc00790b8b186"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from other mgmt nodes",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion Server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ddf9a7451c13869"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "israel-mgmt_node_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "storage_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-029c94ed7aa4390d7",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all output traffic so that packages can be downloaded",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029c94ed7aa4390d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Manager Communication",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication TCP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication UDP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Overlay Network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "storage node lvol connect",
                "from_port": 4420,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4420
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node from mgmt node",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node from other storage nodes",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion Server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ddf9a7451c13869"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "access SNodeAPI from mgmt nodes",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [],
                "description": "prometheus scrape from mgmt nodes",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1ec7b4e3a132a1e"
                ],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "israel-storage_nodes_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "grafana_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-grafana-lb/25b1e075c7600b89",
            "arn_suffix": "net/israel-grafana-lb/25b1e075c7600b89",
            "dns_name": "israel-grafana-lb-25b1e075c7600b89.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-grafana-lb/25b1e075c7600b89",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "israel-grafana-lb",
            "security_groups": [
              "sg-0dc3fc00790b8b186"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046b51ad68e601888"
              },
              {
                "subnet_id": "subnet-0b9f3d5f61ccd107f"
              }
            ],
            "subnets": [
              "subnet-046b51ad68e601888",
              "subnet-0b9f3d5f61ccd107f"
            ],
            "vpc_id": "vpc-08b24176dc4d6300c",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "graylog_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-graylog-lb/07e7e91a87affcdd",
            "arn_suffix": "net/israel-graylog-lb/07e7e91a87affcdd",
            "dns_name": "israel-graylog-lb-07e7e91a87affcdd.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-graylog-lb/07e7e91a87affcdd",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "israel-graylog-lb",
            "security_groups": [
              "sg-0dc3fc00790b8b186"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046b51ad68e601888"
              },
              {
                "subnet_id": "subnet-0b9f3d5f61ccd107f"
              }
            ],
            "subnets": [
              "subnet-046b51ad68e601888",
              "subnet-0b9f3d5f61ccd107f"
            ],
            "vpc_id": "vpc-08b24176dc4d6300c",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "root_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-root-lb/c5c5d93409c60b9d",
            "arn_suffix": "net/israel-root-lb/c5c5d93409c60b9d",
            "dns_name": "israel-root-lb-c5c5d93409c60b9d.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-root-lb/c5c5d93409c60b9d",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "israel-root-lb",
            "security_groups": [
              "sg-0dc3fc00790b8b186"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046b51ad68e601888"
              },
              {
                "subnet_id": "subnet-0b9f3d5f61ccd107f"
              }
            ],
            "subnets": [
              "subnet-046b51ad68e601888",
              "subnet-0b9f3d5f61ccd107f"
            ],
            "vpc_id": "vpc-08b24176dc4d6300c",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grafana_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-grafana-lb/25b1e075c7600b89/650e34b9f8a084b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-grafana-lb/25b1e075c7600b89/650e34b9f8a084b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-grafana-lb/25b1e075c7600b89",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.apigatewayendpoint.aws_lb.grafana_internal_lb",
            "module.apigatewayendpoint.aws_lb_target_group.grafana_target",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "graylog_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-graylog-lb/07e7e91a87affcdd/efa4872d04724698",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-graylog-lb/07e7e91a87affcdd/efa4872d04724698",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-graylog-lb/07e7e91a87affcdd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.apigatewayendpoint.aws_lb.graylog_internal_lb",
            "module.apigatewayendpoint.aws_lb_target_group.graylog_target",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "root_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-root-lb/c5c5d93409c60b9d/55eb7d2e0f1720bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:listener/net/israel-root-lb/c5c5d93409c60b9d/55eb7d2e0f1720bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-root-lb/c5c5d93409c60b9d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.loadbalancer_sg",
            "data.aws_availability_zones.available",
            "module.apigatewayendpoint.aws_lb.root_internal_lb",
            "module.apigatewayendpoint.aws_lb_target_group.root_target",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "arn_suffix": "targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-grafana-lb/25b1e075c7600b89"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "israel-grafana-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "graylog_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "arn_suffix": "targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-graylog-lb/07e7e91a87affcdd"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "israel-graylog-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "root_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
            "arn_suffix": "targetgroup/israel-root-tg/5eb179466b6c556b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:565979732541:loadbalancer/net/israel-root-lb/c5c5d93409c60b9d"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "israel-root-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "grafana_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8-20240620134305431100000019",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "target_id": "i-08b7d65ee43a6e23c"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.grafana_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8-2024062013430584210000001c",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "target_id": "i-0787de5378b94df97"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.grafana_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8-20240620134305234700000017",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-grafana-tg/a77d26d7b35970d8",
            "target_id": "i-01e0e9b1c207717d5"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.grafana_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "graylog_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9-20240620134305404000000018",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "target_id": "i-08b7d65ee43a6e23c"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.graylog_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9-2024062013430548240000001a",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "target_id": "i-0787de5378b94df97"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.graylog_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9-2024062013430568250000001b",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-graylog-tg/46e4c24faaf932b9",
            "target_id": "i-01e0e9b1c207717d5"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.graylog_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.apigatewayendpoint[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "root_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b-20240620134305006600000016",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
            "target_id": "i-08b7d65ee43a6e23c"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.root_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b-20240620134304965900000015",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
            "target_id": "i-0787de5378b94df97"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.root_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b-2024062013430696020000001d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565979732541:targetgroup/israel-root-tg/5eb179466b6c556b",
            "target_id": "i-01e0e9b1c207717d5"
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_instance.mgmt_nodes",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.apigatewayendpoint.aws_lb_target_group.root_target",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:network-acl/acl-022cd22843c107358",
            "default_network_acl_id": "acl-022cd22843c107358",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-022cd22843c107358",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "565979732541",
            "subnet_ids": [
              "subnet-01bc8653647b186be",
              "subnet-046b51ad68e601888",
              "subnet-0b9f3d5f61ccd107f",
              "subnet-0ed80826052275165"
            ],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-03876821e716cbfd3",
            "default_route_table_id": "rtb-03876821e716cbfd3",
            "id": "rtb-03876821e716cbfd3",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-01996e0d7490fc5b7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01996e0d7490fc5b7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0975cfab7af50efb0",
            "association_id": "eipassoc-0efc260afd1e3c072",
            "domain": "vpc",
            "id": "eipalloc-0975cfab7af50efb0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0575fb1f11fe1f771",
            "private_dns": "ip-10-0-2-8.us-east-2.compute.internal",
            "private_ip": "10.0.2.8",
            "public_dns": "ec2-18-118-79-239.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.79.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a909dd830910be3d",
            "association_id": "eipassoc-0f779aa58d0dc91fd",
            "domain": "vpc",
            "id": "eipalloc-0a909dd830910be3d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00f47305df9c24a4f",
            "private_dns": "ip-10-0-4-64.us-east-2.compute.internal",
            "private_ip": "10.0.4.64",
            "public_dns": "ec2-3-142-112-209.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.112.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:internet-gateway/igw-02ec10efd0c5ceca7",
            "id": "igw-02ec10efd0c5ceca7",
            "owner_id": "565979732541",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0975cfab7af50efb0",
            "association_id": "eipassoc-0efc260afd1e3c072",
            "connectivity_type": "public",
            "id": "nat-077125b523e011fd9",
            "network_interface_id": "eni-0575fb1f11fe1f771",
            "private_ip": "10.0.2.8",
            "public_ip": "18.118.79.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046b51ad68e601888",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a909dd830910be3d",
            "association_id": "eipassoc-0f779aa58d0dc91fd",
            "connectivity_type": "public",
            "id": "nat-0670753aec1195194",
            "network_interface_id": "eni-00f47305df9c24a4f",
            "private_ip": "10.0.4.64",
            "public_ip": "3.142.112.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b9f3d5f61ccd107f",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02612eae172503dd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-077125b523e011fd9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02612eae172503dd9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054af31fccc6a01161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0670753aec1195194",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054af31fccc6a0116",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ec10efd0c5ceca7",
            "id": "r-rtb-0a900699634e57d9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a900699634e57d9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-02612eae172503dd9",
            "id": "rtb-02612eae172503dd9",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077125b523e011fd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-054af31fccc6a0116",
            "id": "rtb-054af31fccc6a0116",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0670753aec1195194",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-0a900699634e57d9b",
            "id": "rtb-0a900699634e57d9b",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ec10efd0c5ceca7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038dd9df12fa6496c",
            "route_table_id": "rtb-02612eae172503dd9",
            "subnet_id": "subnet-01bc8653647b186be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0e8cc491b888d73",
            "route_table_id": "rtb-054af31fccc6a0116",
            "subnet_id": "subnet-0ed80826052275165"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1af4fa7ca9a6f4",
            "route_table_id": "rtb-0a900699634e57d9b",
            "subnet_id": "subnet-046b51ad68e601888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f47df5ae89c076b7",
            "route_table_id": "rtb-0a900699634e57d9b",
            "subnet_id": "subnet-0b9f3d5f61ccd107f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-01bc8653647b186be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bc8653647b186be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-0ed80826052275165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed80826052275165",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-046b51ad68e601888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b51ad68e601888",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-0b9f3d5f61ccd107f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9f3d5f61ccd107f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08b24176dc4d6300c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:vpc/vpc-08b24176dc4d6300c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022cd22843c107358",
            "default_route_table_id": "rtb-03876821e716cbfd3",
            "default_security_group_id": "sg-01996e0d7490fc5b7",
            "dhcp_options_id": "dopt-012b99fca0e18d7e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b24176dc4d6300c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03876821e716cbfd3",
            "owner_id": "565979732541",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}